# SandPanda

./: .gitignore  .project  CMakeLists.txt  README.md  bridgeToInflux.py
.github/workflows/: cmake-single-platform.yml
Includes/: AffinityCache.h  Body.h  BodySpecie.h  Compaction.h  ComputingForce.h  Cone.h  Configuration.h  Contact.h  ContactDetection.h  Container.h  Data.h  Elbow.h  Elongation.h  ElongationManager.h  Evolution.h  Gravity.h  HollowBall.h  MasterSolid.h  MechanicalPoint.h  Monitoring.h  Move.h  MultiThread.h  Option.h  Plan.h  PlanR.h  PowderPaQ.h  ReadWrite.h  Sinusoid.h  Solid.h  SolidBuilder.h  Sphere.h  Velocity.h
Includes/Configuration/: Configuration.h  Data.h  Gravity.h  Monitoring.h  Option.h
Includes/Contact/: ComputingForce.h  Contact.h  ContactDetection.h  ContactDetectorBodyVersusBody.h  ContactDetectorBodyVersusCone.h  ContactDetectorBodyVersusDisk.h  ContactDetectorBodyVersusElbow.h  ContactDetectorBodyVersusPlan.h  ContactDetectorSphereVersusBody.h  ContactDetectorSphereVersusCone.h  ContactDetectorSphereVersusDisk.h  ContactDetectorSphereVersusElbow.h  ContactDetectorSphereVersusPlan.h  ContactDetectorSphereVersusSphere.h  ContactIdentifier.h  Elongation.h  ElongationManager.h
Includes/Dynamic/: Compaction.h  Evolution.h  Move.h  Periodicity.h  PowderPaQ.h
Includes/Elongations/: ElongationManager.h
Includes/LinkedCells/: CellBounds.h  Cells.h  LinkedCellFiller.h  LinkedCellSolidListBuilder.h  SolidCells.h  SolidCellsBuilder.h
Includes/Object/: Body.h  BodySpecie.h  Elbow.h  MasterSolid.h  MechanicalPoint.h  Periodicity.h  Plan.h  Sinusoid.h  Solid.h  Sphere.h
Includes/Repository/: SimulationData.h  SimulationDataManager.h
Includes/Solids/: Body.h  BodySpecie.h  Cone.h  Elbow.h  HollowBall.h  MechanicalPoint.h  Plan.h  PlanR.h  SimulationData.h  Sinusoid.h  Solid.h  Solids.h  Sphere.h  Velocity.h
IntegrationTests/: BodyBoxDiff.txt  BodyBoxNew.txt  BodyBoxOriginal.txt  BodyBoxTiming.txt  BodyConeDiff.txt  BodyConeNew.txt  BodyConeOriginal.txt  BodyConeTiming.txt  MasterSolidNew.txt  MasterSolidOriginal.txt  MasterSolidTiming.txt  MixBoxDiff.txt  MixBoxNew.txt  MixBoxOriginal.txt  MixBoxTiming.txt  MixConeDiff.txt  MixConeNew.txt  MixConeOriginal.txt  MixConeTiming.txt  SphereBoxDiff.txt  SphereBoxNew.txt  SphereBoxOriginal.txt  SphereBoxTiming.txt  SphereConeDiff.txt  SphereConeNew.txt  SphereConeOriginal.txt  SphereConeTiming.txt  runTests  runTests_Ref  tests.sh  tests_Ref.sh
IntegrationTests/Analyse/: #main.cpp#  MakeReport  TestReport.txt  main.cpp
IntegrationTests/Body/Box/New/: option.txt
IntegrationTests/Body/Box/New/Export/: container.txt
IntegrationTests/Body/Box/Original/: option.txt
IntegrationTests/Body/Box/Original/Export/: particle.txt
IntegrationTests/Body/Box/Original/Original/: option.txt
IntegrationTests/Body/Box/Original/Start_stop/: container.txt  particle.txt
IntegrationTests/Body/Cone/New/: option.txt
IntegrationTests/Body/Cone/New/Start_stop/: data.txt  particle.txt
IntegrationTests/Body/Cone/Original/: option.txt
IntegrationTests/Body/Cone/Original/Export/: particle.txt
IntegrationTests/MasterSolid/: MasterSolid.sp3l
IntegrationTests/MasterSolid/New/: option.txt
IntegrationTests/MasterSolid/New/Start_stop/: data.txt
IntegrationTests/MasterSolid/Original/: option.txt
IntegrationTests/MasterSolid/Original/Export/: grain.txt
IntegrationTests/MasterSolid/Original/Start_stop/: data.txt  grain.txt
IntegrationTests/Mix/Box/New/: option.txt
IntegrationTests/Mix/Box/Original/: option.txt
IntegrationTests/Mix/Cone/: Untitled.sp3l
IntegrationTests/Mix/Cone/New/: option.txt
IntegrationTests/Mix/Cone/Original/: option.txt
IntegrationTests/Sphere/Box/New/: option.txt
IntegrationTests/Sphere/Box/Original/: option.txt
IntegrationTests/Sphere/Cone/New/: option.txt
IntegrationTests/Sphere/Cone/Original/: option.txt
Ressources/: bridgeToInflux.py
Sources/: AffinityCache.cpp  Body.cpp  BodySpecie.cpp  Compaction.cpp  ComputingForce.cpp  Cone.cpp  Configuration.cpp  Contact.cpp  ContactDetection.cpp  Container.cpp  Data.cpp  Elbow.cpp  Elongation.cpp  Evolution.cpp  Gravity.cpp  HollowBall.cpp  MasterSolid.cpp  Monitoring.cpp  Move.cpp  MultiThread.cpp  Option.cpp  Periodicity.cpp  Plan.cpp  PlanR.cpp  PowderPaQ.cpp  ReadWrite.cpp  SandPanda.cpp  SimulationDataManager.cpp  Sinusoid.cpp  Solid.cpp  SolidBuilder.cpp  Sphere.cpp  Velocity.cpp  main.cpp
Sources/Configuration/: Configuration.cpp  Data.cpp  Gravity.cpp  Monitoring.cpp  Option.cpp
Sources/Contact/: ComputingForce.cpp  Contact.cpp  ContactDetection.cpp  ContactDetectorBodyVersusBody.cpp  ContactDetectorBodyVersusCone.cpp  ContactDetectorBodyVersusDisk.cpp  ContactDetectorBodyVersusElbow.cpp  ContactDetectorBodyVersusPlan.cpp  ContactDetectorSphereVersusBody.cpp  ContactDetectorSphereVersusCone.cpp  ContactDetectorSphereVersusDisk.cpp  ContactDetectorSphereVersusElbow.cpp  ContactDetectorSphereVersusPlan.cpp  ContactDetectorSphereVersusSphere.cpp  ContactIdentifier.cpp  Elongation.cpp  ElongationManager.cpp
Sources/Dynamic/: Compaction.cpp  Evolution.cpp  Move.cpp  Periodicity.cpp  PowderPaQ.cpp
Sources/Elongations/: Elongation.cpp  ElongationManager.cpp
Sources/LinkedCells/: LinkedCellFiller.cpp  LinkedCellSolidListBuilber.cpp  SolidCellsBuilder.cpp
Sources/Object/: Body.cpp  BodySpecie.cpp  Cone.cpp  Container.cpp  Elbow.cpp  HollowBall.cpp  MasterSolid.cpp  MechanicalPoint.cpp  Periodicity.cpp  Plan.cpp  PlanR.cpp  Sinusoid.cpp  Solid.cpp  Sphere.cpp  Velocity.cpp
Sources/Repository/: ReadWrite.cpp  SimulationDataManager.cpp
Sources/Solids/: Body.cpp  BodySpecie.cpp  Cone.cpp  Elbow.cpp  HollowBall.cpp  MasterSolid.cpp  Plan.cpp  PlanR.cpp  Sinusoid.cpp  Solid.cpp  Sphere.cpp  Velocity.cpp
Tests/: CMakeLists.txt  main.cpp
Tests/Object/: TestBody.cpp  TestBodySpecie.cpp  TestContactIdentifier.cpp  TestElbow.cpp  TestElongationManager.cpp  TestHollowBall.cpp  TestMechanicalPoint.cpp  TestPlan.cpp  TestPlanR.cpp  TestSinusoid.cpp  TestSolid.cpp  TestSphere.cpp  TestVelocity.cpp
(+40 files in other folders)
